dnl Process this file with autoconf to produce a configure script.
AC_INIT(fatback.c)
AM_INIT_AUTOMAKE(fatback, 1.3)
AC_ARG_PROGRAM

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_YACC
AC_PROG_CC
AC_PROG_CPP
AM_PROG_LEX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lfl:
AC_CHECK_LIB(fl, main)
#dnl Replace `main' with a function in -lncurses:
#AC_CHECK_LIB(ncurses, main)
#dnl Replace `main' with a function in -lreadline:
#AC_CHECK_LIB(readline, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/file.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_FNMATCH
AC_FUNC_MMAP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd gethostname mkdir strdup uname)

AC_OUTPUT(Makefile)
